# hindi-form-agent

./: .gitignore  README.md  pyproject.toml
data/: README.md  eval_v1.json  from_ner_v1_subsampled.jsonl  handcrafted_seed.jsonl  hardcases_v1.jsonl  split_manifest.json  synthetic_dense_v1.jsonl  synthetic_dense_v1_batch01.jsonl  test_v1.jsonl  train_v1.jsonl  val_v1.jsonl
data/batches/: synthetic_dense_v1_batch02.jsonl  synthetic_dense_v1_batch03.jsonl  synthetic_dense_v1_batch04.jsonl  synthetic_dense_v1_batch05.jsonl  synthetic_dense_v1_batch06.jsonl  (+10 more)
data_prep/: README.md  aggregate_synthetic.py  compare_splits.py  explore_hiner.py  final_sample_10.py  fix_batch01_density.py  full_corpus_qa.py  generate_personas.py  hardcase_spotcheck.py  hiner_exploration_notes.md  india_domain_reference.md  indian_states.py  ner_stoplist.py  ner_to_schema.py  personas_calibration.json  personas_full.json  raw_batch01.json  raw_batch02.json  raw_batch03.json  raw_batch04.json  raw_batch05.json  raw_batch06.json  raw_batch07.json  raw_batch08.json  raw_batch09.json  raw_batch10.json  raw_batch11.json  raw_batch12.json  raw_batch13.json  raw_batch14.json  raw_batch15.json  raw_batch16.json  raw_hardcases.json  regenerate_flagged_entries.py  regenerate_slot562.py  sample_batch.py  sample_batch01.py  save_synthetic_batch.py  show_personas_range.py  split_comparison.md  (+3 more)
schemas/: __init__.py  citizen_profile.py
training/: README.md  evaluate.py  prompt_format.py  requriment.txt  results_v1.md  smoke_train.py
utils/: dataset_stats.py  validate_jsonl.py
