[project]
name = "hindi-form-agent"
version = "0.1.0"
description = "QLoRA fine-tuned Sarvam-1 for Hindi-to-JSON extraction"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jsonlines",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "utils"]
