[project]
name = "hindi-form-agent"
version = "0.1.0"
description = "QLoRA fine-tuned Sarvam-1 for Hindi-to-JSON extraction"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jsonlines",
    "rich",
    "datasets>=2.18,<3",
    "huggingface_hub",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "utils"]
